# doit

./: .gitignore
backend/: .env  Cargo.toml
backend/sql/: create.sql
backend/src/: .env.dev  main.rs  strcts.rs
backend/src/api/: event.rs  mod.rs  state.rs  task.rs  usr.rs
backend/src/model/: event.rs  mod.rs  note.rs  state.rs  task.rs  usr.rs
frontend/: app.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: app.js  app.ts  index.ts  style.css  style.css.map  style.scss
frontend/src/components/: Event.js  State.js  event.ts  scrollbar.ts
frontend/src/services/: Api.js  Api.ts  Events.js  Events.ts  Renderer.js  Renderer.ts  Router.ts
frontend/src/style/: style.scss
frontend/src/tstuff/: interfaces.ts
