[package]
name = "backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["cookies"] }
actix-files = "0.6.2"
postgres = "0.19.5"
tokio-postgres = "0.7.8"
dotenvy = "0.15.7"
config = "0.13.3"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
derive_more = "0.8.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng", ] }
chrono =  {version = "0.4.26", features = ["serde"]}
bcrypt = "0.15"
tokio = { version = "1.29.1", features = ["full"] }
sqlx-postgres = "0.7.0"
